fix build issue

--- a/content/articles/final-article.mdx
+++ b/content/articles/final-article.mdx
@@ -1,6 +1,12 @@
 ---
 title: "Final Article"
+description: "A placeholder article for testing"
 date: "2026-02-01"
+category: "Guide"
+tags: ["test", "placeholder"]
 published: true
 ---
-Placeholder — replace with your real content.
+
+# Final Article
+
+This is a placeholder article. Replace with your real content.
